# zotero-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-17-zotero-mcp.md
docs/superpowers/specs/: 2026-03-17-zotero-mcp-design.md
src/zotero_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: test_client.py  test_server.py
